--- a/style.css
+++ b/style.css
@@ -603,6 +603,35 @@ footer .copyright{
     color:#c9cbce;
     z-index: -9;
 }
+/*About*/
+#page-header.about-header{
+    background-image: url("img/about/banner.png");
+}
+#about-head {
+    display: flex;
+    align-items: center;
+}
+#about-head img{
+    width: 50%;
+    height: auto;
+}
+#about-head div {
+    padding-left: 40px;
+}
+#about-app{
+    text-align: center;
+}
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+#about-app .video video{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+
+}
 /* Start Media Query*/
 @media (max-width:799px){
     .section-p1{
@@ -682,12 +711,11 @@ footer .copyright{
         width: 28%;
     }
     #newsletter .form{
-        width: 70%;
+        width: 80%;
     }
     #newsletter button{
-        width:20%;
+        width:30%;
     }
-    /*Blog*/
 
 }
 @media (max-width:477px) {
@@ -773,5 +801,15 @@ footer .copyright{
     #blog .blog-details{
         width: 100%;
     }
-
+    /*About*/
+    #about-head{
+        flex-direction: column;
+    }
+    #about-head img{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #about-app .video{
+        width: 100%;
+    }
 }
